2025 day 8.  Added distance to Point3D